# Getting-Started-Project

Getting Started C++ Project/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  main.cpp
Getting Started C++ Project/feature/: CMakeLists.txt
Getting Started C++ Project/feature/core/: CMakeLists.txt
Getting Started C++ Project/feature/core/inc/: Math.h
Getting Started C++ Project/feature/core/src/: Math.cpp
Getting Started C++ Project/scripts/: SetupEnvironment.sh
Getting Started C++ Project/tools/test-support/catch2/: catch.hpp
